<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label_card">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center_vertical"
                android:layout_weight="3"
                android:text="@string/name"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/gp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/g"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/a"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/p"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/pmp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:text="@string/s"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/boundary"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/label_card"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stats_list"
        android:layout_below="@id/boundary"/>

</RelativeLayout>